2014-08-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.5 release procedure:
 	Changes since nco-4_4_4: https DAP, gxvx, mk, ncl_var
	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1

	* Sanitize filenames prior to shell use with nm2sng_fl() instead of nm2sng_cdl()
	Fixes bug in MS Windows handling volume names like "C:\foo"

2014-08-21  Charlie Zender  <zender@uci.edu>

	* Fix false negative regressions due to new chunking defaults

	* Fix ncpdq mis-handling of dimension reversal arguments (introduced between 4.3.2--4.3.6)

	* Fix inadvertent omission of --cnk_map switch in ncecat

2014-08-15  Charlie Zender  <zender@uci.edu>

	* Change default chunking policy/map from g2d/rd1 to xst/xst (fxm: breaks some regressions)

	* Add mrd.cdl to check compliance/performance for files/variables with Multiple Record Dimensions

2014-08-14  Charlie Zender  <zender@uci.edu>

	* Add cnk_plc_r1d to only change chunking of specified 1-D record variables

2014-08-13  Charlie Zender  <zender@uci.edu>

	* Tweak Makefile for rhea.ccs.ornl.gov

2014-07-14  Charlie Zender  <zender@uci.edu>

	* Tidy ncks.c and nco_grp_utl.c for MPI work

	* Clarify ncrcat packing issues in man page

2014-07-11  Charlie Zender  <zender@uci.edu>

	* Change FL_LST_IN_MAX_LNG from 10 MB to 504576001 B per request of Christine Smit
	Use case: 30 years of hourly data files each 192 characters long

2014-07-10  Charlie Zender  <zender@uci.edu>

	* Deprecate ENABLE_PNETCDF from meaning exposed PnetCDF API
	Soon it will mean that netCDF4 was built with --enable-pnetcdf

2014-07-08  Charlie Zender  <zender@uci.edu>

	* Handle CF ancillary_variables like, well, ancillary variables

2014-07-06  Charlie Zender  <zender@uci.edu>

	* Integrate netCDF4 MPI I/O calls in library, begin conversion with ncks

	* Clean-up nco_get_prg_info(), make consistent with newer netCDF regression tests
